[package]
name = "zap"
version = "0.0.2"
authors = ["Daniel Oltmanns <daniel.oltmanns@outlook.de>"]
description = "Ligthing fast web framework for rust"
keywords = ["web-framework", "http", "efficiency"]
categories = ["network-programming", "web-programming"]

exclude = [".gitignore", "examples/*"]
readme = "Readme.md"
license = "MIT/Apache-2.0"
hompage = "https://github.com/oldaniel/zap"
repository = "https://github.com/oldaniel/zap"

[dependencies]
bytes = "0.4.5"
futures = "0.1.16"
httparse = "1.2.3"
tokio-io = "0.1.3"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
