[package]
name = "zap"
version = "0.0.4"
authors = ["Daniel Oltmanns <daniel.oltmanns@outlook.de>"]
description = "Ligthing fast web framework for rust"
keywords = ["web-framework", "http", "efficiency"]
categories = ["network-programming", "web-programming"]

exclude = [".gitignore", "examples/*", "benches/*"]
readme = "Readme.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/oldaniel/zap"

[dependencies]
bytes = "0.4.5"
futures = "0.1.17"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
