[package]
name = "zap"
version = "0.0.4"
authors = ["Daniel Oltmanns <oltmannsdaniel@outlook.com>"]
description = "Ligthing fast web server library for rust"
keywords = ["web-framework", "http", "efficiency"]
categories = ["network-programming", "web-programming"]

exclude = [".gitignore", ".travis.yml", "examples/*", "benches/*"]
readme = "Readme.md"
license = "MIT"
repository = "https://github.com/oltdaniel/zap"

[dependencies]
bytes = "0.4.6"
futures = "0.1.18"
tokio-io = "0.1.5"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
